@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-08T08:17:29Z",
-  "count_outdated" : 379,
-  "uniques_outdated" : 205,
+  "timestamp" : "2022-07-08T16:18:56Z",
+  "count_outdated" : 380,
+  "uniques_outdated" : 206,
   "count" : 407,
   "uniques" : 221,
   "clones" : [
-    {
-      "timestamp": "2022-06-24T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-06-25T00:00:00Z",
       "count": 2,
