@@ -1,12 +1,7 @@
 {
-  "count": 28,
+  "count": 27,
   "uniques": 2,
   "clones": [
-    {
-      "timestamp": "2022-06-24T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-06-25T00:00:00Z",
       "count": 2,
